suraj-project/K8S/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
spec:
  selector:
    app: django-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
